// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [acorn] format 1`] = `
"Assigning to rvalue (1:1)
> 1 | ({}) = x;
    | ^
Cause: Assigning to rvalue (1:0)"
`;

exports[`snippet: #0 [acorn] format 2`] = `
"The keyword 'let' is reserved (1:21)
> 1 | class Foo extends ((let)[0] = 1) {}
    |                     ^
Cause: The keyword 'let' is reserved (1:20)"
`;

exports[`snippet: #0 [babel] format 1`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | ({}) = x;
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #0 [babel-ts] format 1`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | ({}) = x;
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #0 [espree] format 1`] = `
"Assigning to rvalue (1:1)
> 1 | ({}) = x;
    | ^
Cause: Assigning to rvalue"
`;

exports[`snippet: #0 [espree] format 2`] = `
"The keyword 'let' is reserved (1:21)
> 1 | class Foo extends ((let)[0] = 1) {}
    |                     ^
Cause: The keyword 'let' is reserved"
`;

exports[`snippet: #0 [espree] format 3`] = `
"The keyword 'let' is reserved (1:18)
> 1 | export default ((let)[0] = 1);
    |                  ^
Cause: The keyword 'let' is reserved"
`;

exports[`snippet: #0 [meriyah] format 1`] = `
"Invalid left-hand side in assignment (1:6)
> 1 | ({}) = x;
    |      ^
Cause: [1:6]: Invalid left-hand side in assignment"
`;

exports[`snippet: #0 [meriyah] format 2`] = `
"The identifier 'let' must not be in expression position in strict mode (1:24)
> 1 | class Foo extends ((let)[0] = 1) {}
    |                        ^
Cause: [1:24]: The identifier 'let' must not be in expression position in strict mode"
`;

exports[`snippet: #0 [meriyah] format 3`] = `
"The identifier 'let' must not be in expression position in strict mode (1:21)
> 1 | export default ((let)[0] = 1);
    |                     ^
Cause: [1:21]: The identifier 'let' must not be in expression position in strict mode"
`;
